--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -10,7 +10,7 @@ RUN wget https://bootstrap.pypa.io/get-pip.py && \
 	python3 get-pip.py && \
 	rm get-pip.py
 
-# install lsb-release, curl, gnu
+# install lsb-release and curl
 RUN apt-get update \
  && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     lsb-release \
@@ -33,9 +33,7 @@ RUN apt-get update \
  && rm -rf /var/lib/apt/lists/*
 
 SHELL ["/bin/bash", "-c"]
-RUN source /opt/ros/noetic/setup.bash
 RUN echo "source /opt/ros/noetic/setup.bash" >> ~/.bashrc
-RUN source ~/.bashrc
 
 # install python dependencies
 RUN apt-get update \
@@ -52,22 +50,18 @@ RUN apt-get update \
 # catkin tools
 RUN apt-get update && apt-get install --no-install-recommends -y --allow-unauthenticated \
      python3-catkin-tools \
+     && apt-get clean \
      && rm -rf /var/lib/apt/lists/*
-
 RUN sudo rosdep init
 RUN rosdep update
 RUN mkdir -p /root/catkin_ws/src
-RUN cd /root/catkin_ws/
 RUN /bin/bash -c  '. /opt/ros/noetic/setup.bash; cd /root/catkin_ws; catkin config -DPYTHON_EXECUTABLE=/usr/bin/python3 -DPYTHON_INCLUDE_DIR=/usr/include/python3.6m -DPYTHON_LIBRARY=/usr/lib/x86_64-linux-gnu/libpython3.6m.so; catkin build'
 
 # clone and build message and service definitions
 RUN /bin/bash -c 'cd /root/catkin_ws/src; \
                   git clone https://github.com/v4r-tuwien/object_detector_msgs.git'
-RUN /bin/bash -c 'cd /root/catkin_ws/src; \
-                  git clone https://gitlab.informatik.uni-bremen.de/robokudo/robokudo_msgs.git'
 RUN /bin/bash -c '. /opt/ros/noetic/setup.bash; cd /root/catkin_ws; catkin build'
 
-# install mediapipe requirements
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
